--- a/.github/workflows/android-build.yaml
+++ b/.github/workflows/android-build.yaml
@@ -7,10 +7,10 @@ jobs:
     build-android:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v3.6.0
 
             - name: Use Node.js 20
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v3.9.1
               with: 
                 node-version: 20
                 cache: "npm"
@@ -19,13 +19,13 @@ jobs:
               run: npm i
 
             - name: Cache Gradle Wrapper
-              uses: actions/cache@v3
+              uses: actions/cache@v3.4.3
               with:
                  path: ~/.gradle/wrapper
                  key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
                 
             - name: Cache Gradle Dependencies
-              uses: actions/cache@v3
+              uses: actions/cache@v3.4.3
               with:
                    path: ~/.gradle/caches
                    key: ${{ runner.os }}-gradle-caches-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
@@ -36,8 +36,14 @@ jobs:
               run: cd android && chmod +x ./gradlew
 
 
-            - name: Build Android APK (Release)
+            - name: Build Android APK
               run: cd android && ./gradlew assembleRelease --no-daemon --console=plain
+
+            - name: Upload APK Artifact
+              uses: actions/upload-artifact@v3.1.4
+              with:
+                name: SmartChat-apk
+                path: android/app/build/outputs/apk/release/app-release.apk
 
 
 
