--- a/.github/workflows/ios-build.yaml
+++ b/.github/workflows/ios-build.yaml
@@ -23,6 +23,9 @@ jobs:
               with:
                 ruby-version: 3.2.1
                 bundler-cache: true
+            
+            - name: Install Cocoapods
+              run: sudo gem install cocoapods
 
             - name: Restore Pods cache
               uses: actions/cache@v3
