--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,12 @@
 name: CI/CD pipeline for SmartChat
 
 on: 
-  push:
+  pull_request:
     branches:
       - main
+    types:
+      - opened
+      - closed
 
 jobs:
   install-and-test:
