--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.2"
   },
