Modify workflow to trigger on pushes and pull requests to main

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,13 +1,12 @@
 name: CI/CD pipeline for SmartChat
 
 on: 
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
-    types:
-      - opened
-      - synchronize
-      - closed
 
 jobs:
   install-and-test:
