--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "lottie-react-native": "^7.2.2",
+    "@reduxjs/toolkit": "^2.7.0",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -28,6 +31,7 @@
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-redux": "^7.1.34",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
