--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
