--- a/ios/SmartChat/Info.plist
+++ b/ios/SmartChat/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+  	<string>[REASON]</string>
+  	<key>NSPhotoLibraryAddUsageDescription</key>
+  	<string>[REASON]</string>
+	<key>NSCameraUsageDescription</key>
+	<string>[REASON]</string>
+	<key>NSContactsUsageDescription</key>
+	<string>[REASON]</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
