--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "lottie-react-native": "^7.2.2",
     "@reduxjs/toolkit": "^2.7.0",
+    "i18next": "^25.1.2",
+    "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
+    "react-i18next": "^15.5.1",
     "react-native": "0.79.2",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-permissions": "^5.4.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
-    "react-native-splash-screen": "^3.3.0"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
