--- a/.github/workflows/ios-build.yaml
+++ b/.github/workflows/ios-build.yaml
@@ -9,6 +9,11 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
+            - name: Setup Xcode 16.3
+              uses: maxim-lobanov/setup-xcode@v1
+              with:
+                xcode-version: '16.3'
+
             - name: Use Node.js 20
               uses: actions/setup-node@v3
               with: 
@@ -45,10 +50,22 @@ jobs:
                 key: ${{ runner.os }}-deriveddata-${{ hashFiles('ios/Podfile.lock') }}
                 restore-keys: |
                     ${{ runner.os }}-deriveddata-
-                
                         
-            - name: Install pod dependencies
-              run: cd ios && pod install && cd ..
-            
-            - name: Build ios
-              run: npx react-native build-ios
+            - name: Remove DerivedData and Pods
+              run: |
+                rm -rf ios/Pods ios/Podfile.lock ~/Library/Developer/Xcode/DerivedData
+                cd ios && pod deintegrate && cd ..
+              
+            - name: Install Pods cleanly
+              run: |
+                cd ios && pod install --repo-update && cd ..
+
+            - name: Build iOS with Xcode
+              run: |
+                cd ios
+                xcodebuild -workspace SmartChat.xcworkspace \
+                            -scheme SmartChat \
+                            -sdk iphonesimulator \
+                            -configuration Debug \
+                            -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.4' \
+                            clean build | xcpretty
