--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-permissions": "^5.4.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
-    "react-native-splash-screen": "^3.3.0"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
