--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.3.12",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.12",
     "@reduxjs/toolkit": "^2.8.1",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
@@ -17,6 +20,8 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-permissions": "^5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
