--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "^4.10.0",
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
