--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-permissions": "^5.4.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-sms": "^1.12.0",
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
