--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
     "@reduxjs/toolkit": "^2.8.1",
+    "date-fns": "^4.1.0",
     "i18next": "^25.1.2",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
