--- a/android/link-assets-manifest.json
+++ b/android/link-assets-manifest.json
@@ -2,8 +2,12 @@
   "migIndex": 1,
   "data": [
     {
-      "path": "assets/fonts/Nunito.ttf",
-      "sha1": "c2adb9c3bcb684afc16cab5e70e8da3d3700a91e"
+      "path": "assets/fonts/Nunito-Bold.ttf",
+      "sha1": "d8091536d0fab37a3239067f708a0221070835da"
+    },
+    {
+      "path": "assets/fonts/Nunito-Regular.ttf",
+      "sha1": "465c464793593babb53e51e2a56562cdd79c237d"
     }
   ]
 }
