--- a/ios/SmartChat/Info.plist
+++ b/ios/SmartChat/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-  	<string>SmartChat needs access to your photo library</string>
-  	<key>NSPhotoLibraryAddUsageDescription</key>
-  	<string>SmartChat needs access to save images to your photo library</string>
+	<string>SmartChat needs access to your photo library</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>SmartChat needs access to save images to your photo library</string>
 	<key>NSCameraUsageDescription</key>
 	<string>SmartChat needs access your camera</string>
 	<key>NSContactsUsageDescription</key>
@@ -40,10 +40,11 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Nunito.ttf</string>
+		<string>Nunito-Bold.ttf</string>
+		<string>Nunito-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
