--- a/ios/SmartChat/Info.plist
+++ b/ios/SmartChat/Info.plist
@@ -45,6 +45,7 @@
 	<array>
 		<string>Nunito-Bold.ttf</string>
 		<string>Nunito-Regular.ttf</string>
+		<string>Nunito-SemiBold.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
