--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
     "@reduxjs/toolkit": "^2.8.1",
     "date-fns": "^4.1.0",
     "i18next": "^25.1.2",
+    "libphonenumber-js": "^1.12.8",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-i18next": "^15.5.1",
@@ -25,6 +27,7 @@
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-localize": "^3.4.1",
     "react-native-permissions": "^5.4.0",
+    "react-native-phone-input": "^1.3.7",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-sms": "^1.12.0",
