--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-contacts": "^8.0.5",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-image-crop-picker": "^0.42.0",
+    "react-native-libsodium": "^1.4.0",
     "react-native-localize": "^3.4.1",
     "react-native-permissions": "^5.4.0",
     "react-native-safe-area-context": "^5.4.0",
