--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "reselect": "^5.1.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
