--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^22.2.0",
+    "@react-native-firebase/messaging": "^22.2.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
@@ -23,6 +25,7 @@
     "react-i18next": "^15.5.1",
     "react-native": "0.79.2",
     "react-native-contacts": "^8.0.5",
+    "react-native-device-info": "^14.0.4",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-libsodium": "^1.4.0",
