--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,7 +12,7 @@ node_require('react-native-permissions/scripts/setup.rb')
 
 platform :ios, '15.1'
 prepare_react_native_project!
-
+use_frameworks! :linkage => :static
 setup_permissions([
   # 'AppTrackingTransparency',
   # 'Bluetooth',
@@ -35,12 +35,11 @@ setup_permissions([
   # 'SpeechRecognition',
   # 'StoreKit',
 ])
-
-linkage = ENV['USE_FRAMEWORKS']
-if linkage != nil
-  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
-  use_frameworks! :linkage => linkage.to_sym
-end
+# linkage = ENV['USE_FRAMEWORKS']
+# if linkage != nil
+#   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
+#   use_frameworks! :linkage => linkage.to_sym
+# end
 
 target 'SmartChat' do
   config = use_native_modules!
