--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
+    "@realm/react": "^0.11.0",
     "@reduxjs/toolkit": "^2.8.1",
     "date-fns": "^4.1.0",
     "i18next": "^25.1.2",
@@ -39,6 +40,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-redux": "^9.2.0",
+    "realm": "^20.1.0",
     "redux": "^5.0.1",
     "reselect": "^5.1.1",
     "socket.io-client": "^4.8.1"
