--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,7 @@ node_require('react-native-permissions/scripts/setup.rb')
 platform :ios, '15.1'
 prepare_react_native_project!
 use_frameworks! :linkage => :static
+$RNFirebaseAsStaticFramework = true
 setup_permissions([
   # 'AppTrackingTransparency',
   # 'Bluetooth',
