--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-contacts": "^8.0.5",
     "react-native-device-info": "^14.0.4",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-libsodium": "^1.4.0",
     "react-native-localize": "^3.4.1",
