--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - local-notifications
+      - foreground-background-notifications
   pull_request:
     branches:
       - main
