--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-libsodium": "^1.4.0",
     "react-native-localize": "^3.4.1",
+    "react-native-otp-entry": "^1.8.5",
     "react-native-permissions": "^5.4.0",
     "react-native-phone-input": "^1.3.7",
     "react-native-safe-area-context": "^5.4.0",
